src/_bleed.scss
// Dependent on _core.scss from @ibm/grid

@each $breakpoint, $values in $ibm-grid {
  @if map-get($values, margin) {
    @if map-get($values, breakpoint) != 0px {
      @media (min-width: map-get($values, breakpoint)) {
        .ibm-col-bleed-left {
          margin-left: -1 * map-get($values, unit);
          padding-left: 2 * map-get($values, unit);
  
          &.ibm-col-group {
            padding-left: map-get($values, unit);
          }
        }
  
        .ibm-col-bleed-right {
          margin-right: -1 * map-get($values, unit);
          padding-right: 2 * map-get($values, unit);
          
          &.ibm-col-group {
            padding-right: map-get($values, unit);
          }
        }
      }
    } @else {
      .ibm-col-bleed-left {
        margin-left: -1 * map-get($values, unit);
        padding-left: 2 * map-get($values, unit);

        &.ibm-col-group {
          padding-left: map-get($values, unit);
        }
      }

      .ibm-col-bleed-right {
        margin-right: -1 * map-get($values, unit);
        padding-right: 2 * map-get($values, unit);
        
        &.ibm-col-group {
          padding-right: map-get($values, unit);
        }
      }
    }
  }
}

.ibm-col-bleed {
  max-width: initial;

  @each $breakpoint, $values in $ibm-grid {
    @if map-get($values, margin) {
      @if map-get($values, breakpoint) != 0px {
        @media (min-width: map-get($values, breakpoint)) {
          margin: 0 -1 * map-get($values, unit);
          padding-left: 2 * map-get($values, unit);
          padding-right: 2 * map-get($values, unit);
  
          &.ibm-col-group {
            padding-left: map-get($values, unit);
            padding-right: map-get($values, unit);
          }
  
          > .ibm-col_padding,
          > .ibm-col_padding-horizontal {
            padding-left: 2 * map-get($values, unit);
            padding-right: 2 * map-get($values, unit);
          }
        }
      } @else {
        margin: 0 -1 * map-get($values, unit);
        padding-left: 2 * map-get($values, unit);
        padding-right: 2 * map-get($values, unit);

        &.ibm-col-group {
          padding-left: map-get($values, unit);
          padding-right: map-get($values, unit);
        }

        > .ibm-col_padding,
        > .ibm-col_padding-horizontal {
          padding-left: 2 * map-get($values, unit);
          padding-right: 2 * map-get($values, unit);
        }
      }
    }
  }

  width: 100vw;
}

.ibm-col-full[class*="ibm-col-bleed"] {
  padding-left: 0;
  padding-right: 0;
}

